# note_manager

./: .gitignore  README.md  pyproject.toml
note_manager/: crud.py  database.py  main.py  models.py  schemas.py
note_manager/db/: notes.db
